<resources>
    <string name="app_name">初高中知识汇总</string>
    <string name="title_activity_main">首页</string>
    <string name="tab_text_1">高 中</string>
    <string name="tab_text_2">初 中</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="highSchool_chiness">语文</string>
    <string name="highSchool_math">数学</string>
    <string name="highSchool_english">英语</string>
    <string name="highSchool_physics">物理</string>
    <string name="highSchool_chemistry">化学</string>
    <string name="highSchool_biology">生物</string>
    <string name="highSchool_geography">地理</string>
    <string name="highSchool_politics">政治</string>
    <string name="highSchool_history">政治</string>
    <string name="splash">闪屏</string>


</resources>
